--- a/scss/Utils/_keyframes.scss
+++ b/scss/Utils/_keyframes.scss
@@ -2,12 +2,12 @@
     0%{
         opacity: 1; 
     }
-    95%{
+    85%{
         opacity: 1; 
 
     }
     99%{
-        z-index: 2;
+        z-index: 5;
     }
     100%{
         opacity: 0;
@@ -21,5 +21,20 @@
     }
     100%{
         transform: rotate(360deg);
+    }
+}
+
+
+@keyframes apparition{
+    0%{
+        opacity: 0;
+        transform: translateY(2vw);
+        @include tablet-responsive{
+            transform: translateY(1vw);
+        }
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0vw);
     }
 }
