--- a/scss/Utils/_variables.scss
+++ b/scss/Utils/_variables.scss
@@ -19,9 +19,10 @@ $font-size: (
     restaurant-link: 5vw,
     text: 4.27vw,
     heart: 7.8vw, 
-    full-heart: 7.8vw,
+    menu-heart: 9vw,
     exp-number:3.2vw,
     exp-icon: 5vw,
+    check-icon: 5vw,
     new: 3.5vw,
     choice-heading: 4.7vw,
     choice-side: 4vw,
