--- a/css/style.css
+++ b/css/style.css
@@ -585,14 +585,47 @@ body {
       .menu__heading {
         font-size: 3.285vw; } }
   .menu__like {
-    background-color: none;
-    font-size: 7.8vw; }
+    font-size: 9vw;
+    position: relative;
+    z-index: 2; }
     @media screen and (min-width: 600px) {
       .menu__like {
-        font-size: 4.68vw; } }
+        font-size: 6.3vw; } }
     @media screen and (min-width: 1020px) {
       .menu__like {
-        font-size: 3.12vw; } }
+        font-size: 3.6vw; } }
+    .menu__like:hover .menu__full-like {
+      opacity: 1; }
+  .menu__full-like {
+    background-color: #F6F6F6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: opacity 250ms; }
+    .menu__full-like i {
+      background: -moz-linear-gradient(180deg, #9356DC, #FF79DA);
+      background: -webkit-linear-gradient(180deg, #9356DC, #FF79DA);
+      background: linear-gradient(180deg, #9356DC, #FF79DA);
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      display: inline;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      font-size: 9vw;
+      opacity: 1; }
+      @media screen and (min-width: 600px) {
+        .menu__full-like i {
+          font-size: 6.3vw; } }
+      @media screen and (min-width: 1020px) {
+        .menu__full-like i {
+          font-size: 3.6vw; } }
   .menu__subtitle {
     font-family: 'Roboto Thin';
     font-size: 4.27vw;
@@ -715,36 +748,36 @@ body {
   .choice:hover .choice__select {
     transform: translateX(0%); }
     .choice:hover .choice__select i {
-      transform: rotate(360deg); }
+      transform: translateX(0) rotate(360deg); }
   .choice:hover .choice__description {
     width: 75%; }
   .choice--1 {
-    animation-delay: 225ms; }
+    animation-delay: 2000ms; }
   .choice--2 {
-    animation-delay: 225ms; }
+    animation-delay: 2225ms; }
   .choice--3 {
-    animation-delay: 225ms; }
+    animation-delay: 2450ms; }
   .choice--4 {
-    animation-delay: 225ms; }
+    animation-delay: 2675ms; }
   .choice--5 {
-    animation-delay: 225ms; }
+    animation-delay: 2900ms; }
   .choice--6 {
-    animation-delay: 225ms; }
+    animation-delay: 3125ms; }
   .choice--7 {
-    animation-delay: 225ms; }
+    animation-delay: 3350ms; }
   .choice--8 {
-    animation-delay: 225ms; }
+    animation-delay: 3575ms; }
   .choice--9 {
-    animation-delay: 225ms; }
+    animation-delay: 3800ms; }
   .choice--10 {
-    animation-delay: 225ms; }
+    animation-delay: 4025ms; }
   .choice__description {
     width: 100%;
     display: grid;
     grid-template-columns: 90% 10%;
     grid-template-rows: auto;
     padding: 3.73vw 5vw 3.73vw 3.2vw;
-    transition: width 1000ms ease-out; }
+    transition: width 1000ms cubic-bezier(0.21, 1.08, 0.6, 1); }
   .choice__heading {
     font-size: 4.7vw;
     width: 100%;
@@ -797,19 +830,27 @@ body {
     height: 100%;
     background-color: #99E2D0;
     color: white;
-    transform-origin: 100% 50%;
     transform: translateX(100%);
     transition: transform 1000ms; }
     .choice__select i {
       font-size: 5vw;
       transition: transform 1000ms;
-      transform: rotate(0deg); }
+      transform: translateX(-4.5vw) rotate(0deg); }
   @media screen and (min-width: 600px) {
     .choice {
       height: 7vw;
       border-radius: 1.3vw;
       margin-bottom: 1.5vw; }
       .choice__description {
-        padding: 1.9vw 1.2vw; } }
+        padding: 1.9vw 1.2vw; }
+      .choice__select i {
+        font-size: 5vw;
+        transform: translateX(-1.5vw) rotate(0deg); } }
+    @media screen and (min-width: 600px) and (min-width: 600px) {
+      .choice__select i {
+        font-size: 1.5vw; } }
+    @media screen and (min-width: 600px) and (min-width: 1020px) {
+      .choice__select i {
+        font-size: 1.5vw; } }
 
 /*# sourceMappingURL=style.css.map */
