--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -20,6 +20,7 @@
     }
 }
 
+
 .menu{
     position: relative;
     top: -14vw;
@@ -44,8 +45,40 @@
         @include size(heading-menu, 0.6, 0.45);
     }
     &__like{
-        background-color: none;
-        @include size(heart, 0.6, 0.4);
+        @include size(menu-heart, 0.7, 0.4);
+        position: relative;
+        z-index: 2;
+        &:hover{
+            .menu__full-like{
+            opacity: 1;
+            }
+        }
+    }
+    &__full-like{
+        background-color: $menu-background-color;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        opacity: 0;
+        transition: opacity 250ms;
+        i{
+            background:-moz-linear-gradient(180deg, $color-primary, $color-secondary); 
+            background: -webkit-linear-gradient(180deg, $color-primary, $color-secondary); 
+            background: linear-gradient(180deg, $color-primary, $color-secondary);
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color:transparent;
+            display: inline;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            @include size(menu-heart, 0.7, 0.4);
+            opacity: 1;
+        }
     }
     &__subtitle{
         font-family: 'Roboto Thin';
@@ -123,8 +156,6 @@
 
 
 
-
-
 .choice{
     animation: apparition map-get($anim-dur, apparition) both;
     border-radius: 4vw;
@@ -141,16 +172,19 @@
         .choice__select{
             transform: translateX(0%); 
             i{
-                transform: rotate(360deg);
+                transform: translateX(0) rotate(360deg);
             }
         }
         .choice__description{
             width: 75%;
         }
     }
-    @for $i from 1 through 10 {
+    &--1{
+        animation-delay: map-get($anim-dur, loader);
+    }
+    @for $i from 2 through 10 {
         &--#{$i} {
-            animation-delay: map-get($anim-delay, apparition);
+            animation-delay: map-get($anim-delay, apparition) * ($i - 1) + map-get($anim-dur, loader);
         }
     }
     &__description{
@@ -159,7 +193,7 @@
         grid-template-columns: 90% 10%;
         grid-template-rows: auto;
         padding: 3.73vw 5vw 3.73vw 3.2vw;
-        transition: width 1000ms ease-out;
+        transition: width 1000ms cubic-bezier(.21,1.08,.6,1);
     }
     &__heading{
         @include size(choice-heading, 0.3);
@@ -198,13 +232,12 @@
         height: 100%;
         background-color: $color-tertiary;
         color: white;
-        transform-origin: 100% 50%;
         transform: translateX(100%); 
         transition: transform 1000ms;
         i{
             font-size: 5vw;
             transition: transform 1000ms;
-            transform: rotate(0deg);
+            transform: translateX(-4.5vw) rotate(0deg) ;
         }
     }
     @include tablet-responsive{
@@ -213,6 +246,12 @@
         margin-bottom: 1.5vw;
         &__description{
             padding: 1.9vw 1.2vw; 
+        }
+        &__select{
+            i{
+                @include size(check-icon, 0.3);
+                transform: translateX(-1.5vw) rotate(0deg) ;
+            }
         }
     }
 }
