--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -28,7 +28,7 @@
     padding: 10.67vw 3.73vw 8vw;
     display: flex;
     flex-direction: column;
-    align-items: top;
+    align-items: start;
     background-color: $menu-background-color;
     &__restaurant, &__subtitle, &__green-line{
         margin-left: 1.6vw;
@@ -36,6 +36,7 @@
     &__restaurant{
         display: flex;
         justify-content:space-between;
+        align-items: center;
         margin-bottom: 1vw;
         margin-right: 6.4vw;
         width: 90%;
@@ -45,7 +46,7 @@
         @include size(heading-menu, 0.6, 0.45);
     }
     &__like{
-        @include size(menu-heart, 0.7, 0.4);
+        @include size(heart, 0.65, 0.45);
         position: relative;
         z-index: 2;
         &:hover{
@@ -76,7 +77,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            @include size(menu-heart, 0.7, 0.4);
+            @include size(heart, 0.65, 0.45);
             opacity: 1;
         }
     }
@@ -111,7 +112,8 @@
         border-radius: 6.4vw 6.4vw 0 0;
         padding: 6.4vw 3.2vw 4.8vw; 
         &__restaurant{
-            margin-bottom: 4vw;
+            margin-bottom: 2vw;
+            margin-right: 2vw;
         }
         &__command{
             padding-right: 7.7vw;
