--- a/scss/Utils/_mixins.scss
+++ b/scss/Utils/_mixins.scss
@@ -50,7 +50,7 @@
         left:0;
         box-shadow: 0 3vw 3vw #C4C4C4;
         border-radius: 8.53vw;
-        background: linear-gradient( 0deg, darken($color-primary, 5), darken($color-secondary, 5));
+        background: linear-gradient( 0deg, lighten($color-primary, 3%), lighten($color-secondary, 3%));
         opacity: 0;
         z-index:-1;
         transition: opacity 300ms;
