--- a/css/style.css
+++ b/css/style.css
@@ -608,7 +608,6 @@ body {
       background: linear-gradient(180deg, #9356DC, #FF79DA);
       -webkit-background-clip: text;
       -moz-background-clip: text;
-      background-clip: text;
       -webkit-text-fill-color: transparent;
       display: inline;
       top: 0;
@@ -743,12 +742,14 @@ body {
   margin-bottom: 4vw;
   overflow: hidden;
   position: relative; }
-  .choice:hover .choice__select {
-    transform: translateX(0%); }
-    .choice:hover .choice__select i {
-      transform: translateX(0) rotate(360deg); }
-  .choice:hover .choice__description {
-    width: 75%; }
+  .choice:hover {
+    border: none; }
+    .choice:hover .choice__select {
+      transform: translateX(0%); }
+      .choice:hover .choice__select i {
+        transform: translateX(0) rotate(360deg); }
+    .choice:hover .choice__description {
+      width: 75%; }
   .choice--1 {
     animation-delay: 2000ms; }
   .choice--2 {
@@ -772,15 +773,16 @@ body {
   .choice__description {
     width: 100%;
     display: grid;
-    grid-template-columns: 90% 10%;
+    grid-template-columns: 83% 17%;
     grid-template-rows: auto;
-    padding: 3.73vw 5vw 3.73vw 3.2vw;
-    transition: width 1000ms cubic-bezier(0.21, 1.08, 0.6, 1); }
+    padding: 3.73vw 6vw 3.73vw 3.2vw;
+    transition: width 500ms linear; }
   .choice__heading {
     font-size: 4.7vw;
+    text-align: start;
     width: 100%;
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 2;
     grid-row: 1;
     white-space: nowrap;
     overflow: hidden;
@@ -792,7 +794,7 @@ body {
       .choice__heading {
         font-size: 1.41vw; } }
   .choice__side {
-    position: relative;
+    text-align: start;
     font-family: 'Roboto Thin';
     font-size: 4vw;
     margin-top: auto;
@@ -810,6 +812,7 @@ body {
       .choice__side {
         font-size: 1.2vw; } }
   .choice__price {
+    text-align: center;
     font-weight: bold;
     font-size: 4vw;
     grid-column-start: 2;
@@ -823,32 +826,33 @@ body {
         font-size: 1.2vw; } }
   .choice__select {
     position: absolute;
+    display: flex;
     right: 0;
     width: 20%;
     height: 100%;
     background-color: #99E2D0;
     color: white;
     transform: translateX(100%);
-    transition: transform 1000ms; }
+    transition: transform 500ms linear; }
     .choice__select i {
-      font-size: 5vw;
-      transition: transform 1000ms;
+      margin: auto;
+      font-size: 6vw;
+      transition: transform 500ms linear;
       transform: translateX(-4.5vw) rotate(0deg); }
+      @media screen and (min-width: 600px) {
+        .choice__select i {
+          font-size: 2.4vw; } }
+      @media screen and (min-width: 1020px) {
+        .choice__select i {
+          font-size: 1.8vw; } }
   @media screen and (min-width: 600px) {
     .choice {
-      height: 7vw;
+      height: 6vw;
       border-radius: 1.3vw;
       margin-bottom: 1.5vw; }
       .choice__description {
-        padding: 1.9vw 1.2vw; }
+        padding: 1.4vw 1.2vw; }
       .choice__select i {
-        font-size: 5vw;
         transform: translateX(-1.5vw) rotate(0deg); } }
-    @media screen and (min-width: 600px) and (min-width: 600px) {
-      .choice__select i {
-        font-size: 1.5vw; } }
-    @media screen and (min-width: 600px) and (min-width: 1020px) {
-      .choice__select i {
-        font-size: 1.5vw; } }
 
 /*# sourceMappingURL=style.css.map */
