--- a/scss/Pages/_menu.scss
+++ b/scss/Pages/_menu.scss
@@ -70,7 +70,6 @@
             background: linear-gradient(180deg, $color-primary, $color-secondary);
             -webkit-background-clip: text;
             -moz-background-clip: text;
-            background-clip: text;
             -webkit-text-fill-color:transparent;
             display: inline;
             top: 0;
@@ -171,6 +170,7 @@
     overflow: hidden;
     position: relative;
     &:hover {
+        border: none;
         .choice__select{
             transform: translateX(0%); 
             i{
@@ -192,23 +192,24 @@
     &__description{
         width: 100%;
         display: grid;
-        grid-template-columns: 90% 10%;
+        grid-template-columns: 83% 17%;
         grid-template-rows: auto;
-        padding: 3.73vw 5vw 3.73vw 3.2vw;
-        transition: width 1000ms cubic-bezier(.21,1.08,.6,1);
+        padding: 3.73vw 6vw 3.73vw 3.2vw;
+        transition: width 500ms linear;
     }
     &__heading{
         @include size(choice-heading, 0.3);
+        text-align: start;
         width: 100%;
         grid-column-start: 1;
-        grid-column-end: 3;
+        grid-column-end: 2;
         grid-row: 1;
         white-space:nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
     }
     &__side{
-        position: relative;
+        text-align: start;
         font-family: 'Roboto Thin';
         @include size(choice-side, 0.3);
         margin-top: auto;
@@ -221,6 +222,7 @@
         grid-row: 2;
     }
     &__price{
+        text-align: center;
         font-weight: bold;
         @include size(choice-side, 0.3);
         grid-column-start: 2;
@@ -229,29 +231,30 @@
     }
     &__select{
         position: absolute;
+        display:flex;
         right: 0;
         width: 20%;
         height: 100%;
         background-color: $color-tertiary;
         color: white;
         transform: translateX(100%); 
-        transition: transform 1000ms;
+        transition: transform 500ms linear;
         i{
-            font-size: 5vw;
-            transition: transform 1000ms;
+            margin: auto;
+            @include size(check-icon, 0.4);
+            transition: transform 500ms linear;
             transform: translateX(-4.5vw) rotate(0deg) ;
         }
     }
     @include tablet-responsive{
-        height: 7vw;
+        height: 6vw;
         border-radius: 1.3vw;
         margin-bottom: 1.5vw;
         &__description{
-            padding: 1.9vw 1.2vw; 
+            padding: 1.4vw 1.2vw; 
         }
         &__select{
             i{
-                @include size(check-icon, 0.3);
                 transform: translateX(-1.5vw) rotate(0deg) ;
             }
         }
