--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import "./Utils/mixins";
 @import "./Utils/keyframes";
 @import "./Base/font";
-@import "./Base/box-sizing";
+@import "./Base/general";
 @import "./Layout/header";
 @import "./Layout/footer";
 @import "./Layout/loader";
