--- a/scss/Base/_general.scss
+++ b/scss/Base/_general.scss
@@ -7,3 +7,8 @@ body{
     background-color: $background-color;
     padding: 0px;
 }
+
+button{
+    border: none;
+    background-color: rgba(white, 0);
+}
