--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ button {
         padding: 0.35vw 0.8vw;
         border-radius: 0.12vw; } }
 
-.menu-page {
+.restaurant {
   background-color: #F6F6F6;
   overflow-y: scroll; }
 
